moved inner classes